<resources>
    <string name="app_name">UberConvertPrice</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>

    <string name="time">Минуты</string>
    <string name="way">Километры</string>
    <string name="calculate">Посчитать</string>
    <string name="descPrice">Стоимость поездок по тарифам:</string>
    <string name="descTvPrice">3/12</string>
    <string name="descOldPrice">7/7</string>
    <string name="clearBtn">X</string>
    <string name="desc_total_price">Стоимость поездки</string>
    <string name="desc_price">Доход</string>

    <string-array name="boost">
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.7</item>
        <item>1.8</item>
        <item>1.9</item>
        <item>2.0</item>
        <item>2.1</item>
        <item>2.2</item>
        <item>2.3</item>
        <item>2.4</item>
        <item>2.5</item>
        <item>2.6</item>
        <item>2.7</item>
        <item>2.8</item>
        <item>2.9</item>
        <item>3.0</item>

    </string-array>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="statistic_toolbar_title">Статистика</string>
    <string name="tab_name_calc">Калькулятор</string>
    <string name="tab_name_ride">Список поездок</string>
    <string name="snackbar_msg_add_to_llist">Добавлено в список поездок</string>
    <string name="snackbar_msg_calculate">Посчитано</string>
    <string name="snackbar_msg_cls">Очищено</string>
    <string name="rub_name">₽</string>
    <string name="text_commission_uber">Комиссия Uber</string>
    <string name="column_name_tariff">Тариф</string>
    <string name="text_commission_partner">Комиссия партнера</string>
    <string name="desc_garantpik_surcharge">гарантированный пик</string>
    <string name="descHighPrice">повышенный спрос</string>
</resources>
