<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/tools"
    android:id="@+id/sub_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="Переключатель тарифа" />

            <!--TextInputLayout в данном случае для того чтобы hint стал анимированным-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:hintTextAppearance="@style/EditTextHintStyleOne">

                <ru.igorsharov.uberconvertprice.CustomEditText
                    android:id="@+id/editTextPrthnerCommisson"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:ellipsize="end"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:hint="Комиссия партнера"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:theme="@style/EditTextStyle" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClearEditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_weight="4"
                android:text="@string/clearBtn"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonCalc"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/calculate" />
        </LinearLayout>

        <android.support.v7.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            app:columnCount="2">

            <TextView
                android:id="@+id/tvAttentionCarSharing"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:text="Внимание! Стоимость поездки близка к стоимости каршеринга!"
                android:textColor="@color/colorRed"
                android:visibility="gone"
                app:layout_columnSpan="2"
                app:layout_columnWeight="2"
                app:layout_gravity="fill" />

            <TextView
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:text="@string/column_name_tariff"
                app:layout_columnWeight="2"
                app:layout_gravity="fill" />

            <TextView
                android:id="@+id/tvTariffName"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/descTvPrice"
                app:layout_columnWeight="1"
                app:layout_gravity="fill" />


            <TextView
                android:gravity="center_vertical"
                android:text="@string/desc_total_price"
                app:layout_gravity="fill" />

            <TextView
                android:id="@+id/tvResultCost"
                android:gravity="center"
                android:textSize="@dimen/sizeTextPrice"
                app:layout_gravity="fill" />

            <TextView
                android:id="@+id/tvDescHighPrice"
                android:gravity="center_vertical"
                android:text="@string/descHighPrice"
                android:visibility="gone"
                app:layout_gravity="fill" />

            <TextView
                android:id="@+id/tvResultHighPrice"
                android:gravity="center"
                android:textSize="@dimen/sizeTextPrice"
                android:visibility="gone"
                app:layout_gravity="fill" />

            <!--черта-->
            <TextView
                android:id="@+id/tvDescLineClientCost"
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:visibility="gone"
                app:layout_column="1"
                app:layout_gravity="center" />

            <!--<TextView-->
            <!--android:id="@+id/tvDescClientCost"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:gravity="center_vertical"-->
            <!--android:text="Итого пассажирские"-->
            <!--android:visibility="gone"-->
            <!--app:layout_gravity="fill" />-->

            <TextView
                android:id="@+id/tvResultClientCost"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_column="1"
                app:layout_gravity="fill" />


            <TextView
                android:gravity="center_vertical"
                android:text="@string/text_commission_uber"
                app:layout_gravity="fill" />

            <TextView
                android:id="@+id/tvResultCommissionUber"
                android:gravity="center"
                android:textSize="@dimen/sizeTextPrice"
                app:layout_gravity="fill" />

            <TextView
                android:id="@+id/tvDescGarantPeakSurcharge"
                android:gravity="center_vertical"
                android:text="@string/desc_garantpik_surcharge"
                android:visibility="gone"
                app:layout_gravity="fill" />

            <TextView
                android:id="@+id/tvResultGarantPeakSurcharge"
                android:gravity="center"
                android:textSize="@dimen/sizeTextPrice"
                android:visibility="gone"
                app:layout_gravity="fill" />

            <TextView
                android:gravity="center_vertical"
                android:text="@string/text_commission_partner"
                app:layout_gravity="fill" />

            <TextView
                android:id="@+id/tvResultCommissionPartner"
                android:gravity="center"
                android:textSize="@dimen/sizeTextPrice"
                app:layout_gravity="fill" />

            <!--черта-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                app:layout_columnSpan="2"
                app:layout_gravity="fill" />

            <TextView
                android:gravity="center_vertical"
                android:text="@string/desc_price"
                app:layout_gravity="fill" />

            <TextView
                android:id="@+id/tvResultProfit"
                android:gravity="center"
                android:textSize="18sp"
                app:layout_gravity="fill" />
        </android.support.v7.widget.GridLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintTextAppearance="@style/EditTextHintStyleOne">

                <ru.igorsharov.uberconvertprice.CustomEditText
                    android:id="@+id/editTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:ellipsize="end"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:hint="@string/time"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:theme="@style/EditTextStyle" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintTextAppearance="@style/EditTextHintStyleTwo">

                <ru.igorsharov.uberconvertprice.CustomEditText
                    android:id="@+id/editTextWay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:hint="@string/way"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:theme="@style/EditTextStyle" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/boostSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:entries="@array/boost" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chbGarantpik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Гарантпик"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/chbPrigorod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Пригород"
                android:visibility="gone" />
        </LinearLayout>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"

        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_black_24dp" />


</android.support.design.widget.CoordinatorLayout>






